Change save path

--- a/installer.cfg
+++ b/installer.cfg
@@ -1,6 +1,6 @@
 [Application]
 name=hue_plus
-version=1.1.5
+version=1.1.8
 publisher=Gustav Hansen
 # How to launch the app - this calls the 'main' function from the 'myapp' package:
 entry_point=hue_plus.hue_ui:main
@@ -15,6 +15,7 @@ packages = hue_plus
 pypi_wheels= PyQt5==5.8.2
     pyserial==3.3
     sip==4.19.2
+    appdirs=1.4.3
 
 # Other files and folders that should be installed
 files = LICENSE
