--- a/installer.cfg
+++ b/installer.cfg
@@ -15,7 +15,7 @@ packages = hue_plus
 pypi_wheels= PyQt5==5.8.2
     pyserial==3.3
     sip==4.19.2
-    appdirs=1.4.3
+    appdirs==1.4.3
 
 # Other files and folders that should be installed
 files = LICENSE
