Add pyaudio dependency

--- a/installer.cfg
+++ b/installer.cfg
@@ -16,6 +16,7 @@ pypi_wheels= PyQt5==5.8.2
     pyserial==3.3
     sip==4.19.2
     appdirs==1.4.3
+    pyaudio==0.2.11
 
 # Other files and folders that should be installed
 files = LICENSE
